sort.basic.lessons.sort.basic.cocktail.AlgCocktailSort2.scala.error
AlgCocktailSort2:24: error: not found: value k
      if (!plusPetit(k,k+1))
                     ^AlgCocktailSort2:24: error: not found: value k
      if (!plusPetit(k,k+1))
                       ^AlgCocktailSort2:26: error: not found: value k
        echange(k,k+1)
                ^AlgCocktailSort2:26: error: not found: value k
        echange(k,k+1)
                  ^